--- a/demo/index.html
+++ b/demo/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="utf-8">
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Slackey&display=swap');
+    
     body {
       background: #fafafa;
+      margin: 0px;
     }
   </style>
 </head>
@@ -12,7 +15,7 @@
   <div id="demo"></div>
 
   <script type="module">
-    import { html, render } from 'lit-html';
+    import { html, render } from 'lit';
     import '../direwolf-modeler.js';
 
     const title = 'Hello owc World!';
