More updates for lit 2

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,11 +18,9 @@
     import { html, render } from 'lit';
     import '../direwolf-modeler.js';
 
-    const title = 'Hello owc World!';
     render(
       html`
-        <direwolf-modeler .title=${title}>
-          some more light-dom
+        <direwolf-modeler>
         </direwolf-modeler>
       `,
       document.querySelector('#demo')
